<resources>
    <string name="app_name">github_api</string>
    <string name="username">(%1$s)</string>
    <string name="greeting">Halo,</string>
    <string name="followings">Followings (%1$d)</string>
    <string name="followers">Followers (%1$d)</string>
    <string name="search_user">Search User...</string>
    <string name="detail_user">Detail User</string>
    <string name="repository_user">%1$s\'s Repository</string>
    <string name="public_repo">Public Repo (%1$d)</string>
    <string name="starred_repo">Starred Repo</string>
    <string name="separator">-</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="change_theme">Ganti Tema</string>
    <string name="change_theme_desc">Ubah tema sesuai dengan kenyamananmu.</string>
    <string name="home_heading">Github User API</string>
    <string name="home_desc">Cari seluruh user yang ada di Github</string>
    <string name="favourite_user">Favourite User</string>
    <string name="search_empty">User yang kamu cari tidak bisa ditemukan</string>
    <string name="favourite_empty">User favoritmu masih kosong</string>
    <string name="followers_empty">User ini tidak memiliki pengikut</string>
    <string name="following_empty">User ini tidak mengikuti siapapun</string>
    <string name="repo_empty">User ini tidak memiliki repository</string>
    <string name="starred_repo_empty">User ini tidak memiliki starred repository</string>


    <string name="ic_arrow_back_desc">Icon untuk kembali ke halaman sebelumnya</string>
    <string name="ic_arrow_current_user">Icon untuk menuju detail user</string>
    <string name="ic_favorite_desc">Icon untuk menambahkan user ke halaman favorit</string>
    <string name="ic_favorite_nav">Icon untuk menuju ke halaman favorit</string>
    <string name="ic_setting_nav">Icon untuk menuju ke halaman setting</string>
    <string name="civ_desc">Gambar untuk menampilkan profile user</string>
    <string name="ic_location_desc">Icon untuk menampilkan lokasi user</string>
    <string name="ic_company_desc">Icon untuk menampilkan tempat user bekerja</string>
    <string name="ic_github_desc">Icon Aplikasi</string>
    <string name="ic_fork">Icon untuk menampilkan jumlah fork dari repository user</string>
    <string name="ic_stargazers">Icon untuk menampilkan jumlah stargazers dari repository user</string>
</resources>