<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.activity.MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeadingSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <ProgressBar
            android:id="@+id/progressBarHeading"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            />
        
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civCurrentUser"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/tvGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting"
            style="@style/Title"
            app:layout_constraintStart_toEndOf="@id/civCurrentUser"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="15dp"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/tvUserFullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            style="@style/Heading"
            app:layout_constraintStart_toEndOf="@id/civCurrentUser"
            app:layout_constraintTop_toBottomOf="@id/tvGreeting"
            app:layout_constraintBottom_toTopOf="@+id/clAdditionalDetail"
            android:layout_marginStart="15dp"
            android:visibility="invisible"

            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clAdditionalDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tvUserFullname"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible">

            <TextView
                android:id="@+id/tvFollowings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followings"
                style="@style/Body.Follow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                />

            <TextView
                android:id="@+id/tvFirstSeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                style="@style/Body.Follow"
                app:layout_constraintStart_toEndOf="@id/tvFollowings"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="5dp"

                />

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followings"
                style="@style/Body.Follow"
                app:layout_constraintStart_toEndOf="@id/tvFirstSeparator"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="5dp"

                />

            <TextView
                android:id="@+id/tvSecondSeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                style="@style/Body.Follow"
                app:layout_constraintStart_toEndOf="@id/tvFollowers"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="5dp"

                />

            <TextView
                android:id="@+id/tvPublicRepo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_repo"
                style="@style/Body.Repo"
                app:layout_constraintStart_toEndOf="@id/tvSecondSeparator"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="5dp"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/ivArrow"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
            />





    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.search.SearchBar
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textAppearance="@style/HeadingSmall"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:backgroundTint="@color/container_color"
        android:hint="@string/search_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clHeadingSection"/>

    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/search_user"
        app:layout_anchor="@id/searchBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.google.android.material.search.SearchView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUsers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>